[metadata]
name = job_pusher
summary = A project for reading from one host, doing some processing, and writing to another from a pool of hosts
description-file =
    README.rst
author = Trevor McCasland
author-email = trevormccasland1@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    log-processor-client = job_pusher.client:main
    log-processor-worker = job_pusher.worker:main
